[gd_scene load_steps=3 format=3 uid="uid://dtqwxj3yt1bwa"]

[ext_resource type="Script" uid="uid://b2pxy77ji1gyl" path="res://scripts/main.gd" id="1"]
[ext_resource type="Script" uid="uid://dwsr75q55ci8q" path="res://scripts/ui.gd" id="2"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 320)
zoom = Vector2(1, 1)

[node name="Enemies" type="Node2D" parent="."]
z_index = 1

[node name="Towers" type="Node2D" parent="."]
z_index = 1

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StatsContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Gold: 200"

[node name="LivesLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Lives: 20"

[node name="WaveLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Wave: 0"

[node name="StartWaveButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Wave"

[node name="TowerButtons" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ArcherButton" type="Button" parent="UI/MarginContainer/VBoxContainer/TowerButtons"]
layout_mode = 2
text = "Archer (50g)"

[node name="MageButton" type="Button" parent="UI/MarginContainer/VBoxContainer/TowerButtons"]
layout_mode = 2
text = "Mage (100g)"

[node name="CannonButton" type="Button" parent="UI/MarginContainer/VBoxContainer/TowerButtons"]
layout_mode = 2
text = "Cannon (150g)"

[node name="BlockerButton" type="Button" parent="UI/MarginContainer/VBoxContainer/TowerButtons"]
layout_mode = 2
text = "Path Blocker (300g)"

[connection signal="blocker_selected" from="UI" to="." method="_on_blocker_selected"]
[connection signal="start_wave_pressed" from="UI" to="." method="start_wave"]
[connection signal="tower_selected" from="UI" to="." method="_on_tower_selected"]
